--- a/info.yaml
+++ b/info.yaml
@@ -8,7 +8,7 @@ project:
 source_files:        
    - design.sv
 #   - decoder.v
-top_module:  "seven_segment_seconds"      # put the name of your top module here, make it unique by prepending your github username
+top_module:  "combo"      # put the name of your top module here, make it unique by prepending your github username
 
 # Keep a track of the submission yaml
 yaml_version: 3.0
