--- a/info.yaml
+++ b/info.yaml
@@ -6,7 +6,7 @@ project:
 # If using an HDL, set wokwi_id as 0 and uncomment and list your source files here. 
 # Source files must be in ./src and you must list each source file separately
   source_files:
-    - comboloc.v
+    - combolock.v
   top_module:  "combo"      # put the name of your top module here, make it unique by prepending your github username
 
 # Keep a track of the submission yaml
